# wl

./: .gitmodules  do  main.cpp  main2.cpp  meson.build  old.cpp
include/: clock.h  egl_common.c  egl_common.h  view.h
include/glad/: glad.h  glad_egl.h
lib/: meson.build
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
res/shaders/: main.frag  main.vert
src/: clock.cpp  demo.c  egl_common.cpp  glad.c  glad_egl.c  view.cpp
